css/style.css
/* Created by Sha Huang */

* {
    margin: 0;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

html {
    -webkit-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
}

body {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 2em;
    margin: 0;
    background-color: #FAFAFA;
}

nav {
    background-color: lightblue;
    border-bottom: solid gold 2px;
}

nav ul {
    display: flex;
    flex-wrap: wrap;
    padding-left: 0;
    margin: 0;
    list-style: none;
}

nav li {
    flex: 1;
    text-align: center;
}

nav li a {
    display: block;
    padding: 1rem 0rem;
    color: white;
    text-decoration: none;
}

nav li:hover {
    background-color: lightcyan;
    transition: 0.5s;
}

nav a:hover {
    text-decoration: solid;
    color: darkgoldenrod;
    transition: 0.5s;
}

section {
    display: flex;
    flex-wrap: wrap;
    /* align-items: center; */
    align-items: flex-start;
    margin: 0.6rem;
    padding: 2rem;
    border-radius: 0.6rem;
}

section:nth-of-type(2n) {
    background-color: paleturquoise;
}

section:nth-of-type(2n+3) {
    flex-direction: row-reverse;
}

section:hover {
    transition: 0.7s;
    box-shadow: 0 0 0.8rem lightseagreen;
}

#grad-color {
    color: white;
    transition: background-image 0.1s linear;
}

h1, h2, h3 {
    width: 100%;
    padding: 2rem 0;
    text-align: center;
}

article {
    flex: 1;
    display: flex;
    flex-wrap: wrap;
    /* justify-content: flex-start; */
    margin: 1rem;
    padding: 2rem;
}

article p {
    width: 100%;
    /* margin: 1rem 0 0 0; */
}

article svg {
    margin: 10px 8px 10px 8px;
}

article svg:hover {
    margin: 5px 8px 15px 8px;
    transition: 0.3s;
}

article img {
    border-radius: 2rem;
}

article table {
    table-layout: auto;
    border-collapse: collapse;
    /* border-top: 0.3rem solid rosybrown; */
    /* border-bottom: 0.3rem solid rosybrown; */
}

caption {
    padding: 0rem 0rem 1.2rem 0rem;
    font-size: 2.0rem;
    font-style: italic;
    caption-side: top;
    letter-spacing: 0.1rem;
}

thead {
    padding: 0.2rem 0.8rem;
    font-size: 1.5rem;
    text-align: left;
}

/* tbody tr:nth-child(odd) {
    background-color: lightgreen;
} */

tr:hover {
    transition: 0.5s;
    box-shadow: 0 0 0.2rem 0.2rem rgb(225, 229, 6);
}

th, td {
    padding: 0.2rem 1.2rem;
    font-size: 1.2rem;
    vertical-align: middle;
}

th:nth-child(2), td:nth-child(2), th:nth-child(5), td:nth-child(5) {
    text-align: right;
}

.button {
    /* display: inline-block; */
    width: 18rem;
    height: 4rem;
    margin: 1.5rem 0 0 0;
    padding: 1rem;
    border-radius: 1rem;
    color: white;
    background-color: #007bff;
    text-align: center;
    text-decoration: none;
}

.button:hover {
    background-color: purple;
    transition: 0.5s;
}

.tile {
    /* display: inline-block; */
    /* vertical-align: top; */
    width: 18.2rem;
    height: 13rem;
    margin: 0.3rem;
    padding: 1rem;
    border-radius: 1.5rem;
    font-size: 1.2rem;
    color: white;
    background-color: #00c8ff;
    text-decoration: none;
}

.tile:hover {
    background-color: green;
    /* box-shadow: 0 0 0.2rem 0.2rem green; */
    transition: 0.7s;
}

footer {
    display: flex;
    background-color: #a7ffeb;
}

footer div {
    flex: 1;
    display: flex;
    align-items: center;
    padding: 1rem 5rem;
}

footer div a {
    display: flex;
    padding: 0.5rem 3rem 0.5rem 0rem;
}

footer div a:hover {
    padding: 0.2rem 3rem 0.8rem 0rem;
    transition: 0.3s;
}

/* a svg {
    display: block;
} */

/* @media (max-width: 500px) {
    .tile {
        width: 10rem;
        height: 11.5rem;
        margin: 0.1rem;
        padding: 0.3rem;
        border-radius: 0.8rem;
        font-size: 1.0rem;
    }
} */

@media (max-width: 1100px) {
    section:nth-of-type(n), footer {
        flex-direction: column;
    }

    body {
        font-size: 1.5em;
    }

    section {
        padding: 2rem 1rem;
    }

    article {
        margin: 1rem 0rem;
        padding: 1rem 0.5rem;
    }

    th, td {
        padding: 0.3rem 0.2rem;
        font-size: 1.0rem;
    }

    footer div {
        padding: 1rem 2.5rem;
    }
}

